backend/src/main/java/com/example/aiverse/common/error/CreditErrorCode.java
package com.example.aiverse.common.error;

import org.springframework.http.HttpStatus;

public enum CreditErrorCode implements ErrorCode {
    PRODUCT_NOT_FOUND("PRODUCT_NOT_FOUND", "크레딧 상품을 찾을 수 없습니다.", HttpStatus.NOT_FOUND),
    PRODUCT_INACTIVE("PRODUCT_INACTIVE", "판매가 중단된 크레딧 상품입니다.", HttpStatus.CONFLICT);

    private final String code;
    private final String message;
    private final HttpStatus status;

    CreditErrorCode(String code, String message, HttpStatus status) {
        this.code = code;
        this.message = message;
        this.status = status;
    }

    @Override
    public String code() {
        return code;
    }

    @Override
    public String message() {
        return message;
    }

    @Override
    public HttpStatus status() {
        return status;
    }
}
